================================================================================

# Future

## New Tools

## New Features
- `sort`: search and sort for the "choose unit to elevate to the barony" screen. units are sorted by the number of item preferences they have and the units are annotated with the items that they have preferences for
- `gui/mass-remove`: new global keybinding: Ctrl-M while on the fort map

## Fixes
- `reveal`: now avoids revealing blocks that contain divine treasures, encased horrors, and deep vein hollows (so the surprise triggers are not triggered prematurely)
- `sort`: fix mouse clicks falling through the squad assignment overlay panel when clicking on the panel but not on a clickable widget
- `sort`: fix potential crash when removing jobs directly from the Tasks info screen
- `misery`: fix error when changing the misery factor
- When passing map movement keys through to the map from DFHack tool windows, also pass fast z movements (shift-scroll by default)
- `getplants`: fix crash when processing mod-added plants with invalid materials
- Dreamfort: fix holes in the "Inside+" burrow on the farming level (burrow autoexpand is interrupted by the pre-dug miasma vents to the surface)

## Misc Improvements
- `autochop`: better error output when target burrows are not specified on the commandline
- `autoclothing` : now does not consider worn (x) clothing as usable/available, should help with using with `tailor` at same time
- `burrow`: flood fill now requires an explicit toggle before it is enabled to help prevent accidental flood fills
- wherever units are listed in DFHack tools, properties like "agitated" or (-trained-) are now shown
- `work-now`: now saves its enabled status with the fort
- `fastdwarf`: now saves its state with the fort
- `fastdwarf`: prevent units from teleporting to inaccessible areas when in teledwarf mode
- `fastdwarf`: allow units to meander and satisfy needs when they have no current job and teledwarf mode is enabled